# rho

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  NOTICE  README.md  SECURITY.md  TODO-encoding-update.md  flake.nix  goal.md  idea2.md  justfile  justfile.custom.just
.cargo/: config.toml
.config/flakebox/: id
.config/selfci/: ci.sh
crates/claude-sdk/: Cargo.toml
crates/json-stream/: Cargo.toml
crates/oct/: Cargo.toml
crates/octo/: Cargo.toml
crates/octo-cli/: Cargo.toml
crates/octo-cli/src/: ci.rs  main.rs  octo_client.rs  pr.rs  repo.rs
crates/octo-server/: Cargo.toml
crates/octo-types/: Cargo.toml
crates/octo/src/: lib.rs  state.rs  types.rs
crates/octo/src/api/: mod.rs
crates/pprof/: CHANGELOG.md  RHO_PATCH.md
crates/prefix-id/: Cargo.toml
crates/prefix-id/src/: lib.rs
crates/rho/: Cargo.toml
crates/rho-agent/: Cargo.toml
crates/rho-agent/src/: agent2.rs  claude.rs  code_mode.rs  db.rs  invariants.rs  lazy.rs  lib.rs  multi_agent_tools.rs  observable.rs  pool.rs  system_prompt.rs  tests.rs  thread.rs  title.rs
crates/rho-agent/src/claude/: projection.rs
crates/rho-agent/src/db/: tests.rs
crates/rho-blocking-notify-channel/: AGENTS.md  Cargo.toml  README.md  SECURITY.md
crates/rho-blocking-notify-channel/src/: lib.rs  tests.rs
crates/rho-ci/: Cargo.toml
crates/rho-ci/src/: check.rs  client.rs  config.rs  envs.rs  lib.rs  main.rs  protocol.rs  tests.rs  worker.rs
crates/rho-ci/tests/: client.rs
crates/rho-claude/: Cargo.toml
crates/rho-cli/: Cargo.toml
crates/rho-cli-term-raw/: Cargo.toml  README.md
crates/rho-cli-term-raw/src/: lib.rs  main.rs  tests.rs
crates/rho-cli/src/: completion.rs  land.rs  lib.rs  main.rs  markdown.rs  mcp_agent_tools.rs  octo_cli.rs  pr.rs  slack.rs  slash_commands.rs  term.rs  tests.rs  tool_render.rs  wayland.rs  workstream.rs
crates/rho-code-mode/: Cargo.toml
crates/rho-code-mode/src/: cell.rs  description.rs  lib.rs  prelude.js  runtime.rs  session.rs  truncate.rs
crates/rho-code-mode/tests/: session.rs
crates/rho-commands/: Cargo.toml
crates/rho-context-config/: Cargo.toml
crates/rho-context-config/src/: lib.rs
crates/rho-core/: Cargo.toml
crates/rho-core/src/: append_string.rs  lib.rs  util.rs
crates/rho-daemon/: Cargo.toml
crates/rho-daemon/src/: lib.rs  main.rs  shell.rs  terminal.rs  voice.rs  webui.rs
crates/rho-daemon/src/debug/: mod.rs
crates/rho-daemon/src/terminal/: keys.rs
crates/rho-daemon/src/webui/: json.rs
crates/rho-daemon/tests/: terminal_stream.rs  zed_channel.rs
crates/rho-db/: Cargo.toml  TODO.md
crates/rho-db/src/: lib.rs
crates/rho-gui/: Cargo.toml
crates/rho-gui/assets/settings/: default.json
crates/rho-gui/assets/themes/rho-monokai-p3/: rho-monokai-p3.json
crates/rho-gui/assets/themes/rho-oksolar-p3/: rho-oksolar-p3.json
crates/rho-gui/src/: activity_state.rs  agent_state.rs  agent_view.rs  banner.rs  chime.rs  cli_theme.rs  command.rs  commands.rs  completion_state.rs  connection.rs  dashboard.rs  diff_view.rs  draft_view.rs  editor_config.rs  highlights.rs  main.rs  minibuffer.rs  pane.rs  prompt_state.rs  registry.rs  rho_assets.rs  rho_gui.rs  role_state.rs  shell_state.rs  shell_view.rs  socket_client.rs  status_line.rs  store.rs  style.rs  task_state.rs  terminal_view.rs  tests.rs  tool_render.rs  tool_state.rs  topic_rail.rs  transcript.rs  transient.rs  view_config.rs  voice_audio.rs  workspace.rs  (+1 more)
crates/rho-gui/src/render/: elision.rs  markdown.rs  mod.rs
crates/rho-gui/src/transcript/: elisions.rs  inlays.rs  mod.rs  timers.rs
crates/rho-gui2/: Cargo.toml
crates/rho-inference/: AGENTS.md  ARCHITECTURE.md  Cargo.toml  SECURITY.md
crates/rho-inference-responses/: ARCHITECTURE.md  Cargo.toml  SECURITY.md
crates/rho-inference/src/: auth_cli.rs  config.rs  lib.rs
crates/rho-inference/src/responses/: mod.rs  oauth.rs  session.rs  wire.rs  ws.rs
crates/rho-inference/src/responses/oauth/: tests.rs
crates/rho-inference/src/responses/tests/: mod.rs  parser.rs  request.rs  session.rs  websocket.rs
crates/rho-iroh-auth/: Cargo.toml
crates/rho-iroh-auth/src/: client.rs  lib.rs  server.rs  shared.rs
crates/rho-pr-monitor/: Cargo.toml
crates/rho-pr-monitor/src/: client.rs  db.rs  lib.rs
crates/rho-profiling/: Cargo.toml
crates/rho-profiling/src/: lib.rs
crates/rho-provider-responses/: AGENTS.md  ARCHITECTURE.md  Cargo.toml  SECURITY.md
crates/rho-provider-responses/src/: build_request.rs  lib.rs  oauth.rs  session.rs  tests.rs  ws.rs
crates/rho-provider-responses/src/oauth/: tests.rs
crates/rho-shell/: Cargo.toml
crates/rho-shell-proto/: Cargo.toml
crates/rho-shell/src/: lib.rs  main.rs
crates/rho-shell/tests/: protocol.rs
crates/rho-skills/: Cargo.toml
crates/rho-slack/: Cargo.toml
crates/rho-slack/src/: api.rs  db.rs  lib.rs  manager.rs  mrkdwn.rs  secrets.rs  socket_mode.rs
crates/rho-slack/tests/: e2e.rs
crates/rho-store-cbor/: Cargo.toml
crates/rho-store-redb/: Cargo.toml
crates/rho-store-redb/src/: lib.rs  node_id.rs  tests.rs
crates/rho-term-screen/: Cargo.toml
crates/rho-term-screen/src/: lib.rs  screen.rs  style.rs
crates/rho-term-screen/src/screen/: tests.rs
crates/rho-tool-shell/: Cargo.toml
crates/rho-tool-shell/examples/: workspace_smoke.rs
crates/rho-tool-shell/src/: apply_patch.lark  apply_patch.rs  lib.rs  tests.rs  truncate.rs
crates/rho-tool-shell/src/apply_patch/: tests.rs
crates/rho-tool-shell/src/truncate/: tests.rs
crates/rho-ui-proto/: Cargo.toml
crates/rho-ui-proto/src/: client.rs  lib.rs  remote.rs  server.rs  shell.rs  term.rs
crates/rho-voice/: Cargo.toml
crates/rho-voice/src/: auth.rs  cli.rs  lib.rs  session.rs  tools.rs  wire.rs
crates/rho-web-search/: Cargo.toml
crates/rho-web-search/src/: lib.rs  schema.rs  search.rs
crates/rho-webui-messages/: Cargo.toml
crates/rho-workspaces/: Cargo.toml
crates/rho-workspaces/src/: diff.rs  lib.rs  ns.rs  sandbox.rs
crates/rho-zed-host/: Cargo.toml
webui/: Cargo.toml  README.md  index.html  style.css
webui/src/: conn.rs  main.rs  md.rs  ui.rs
(+81 files in other folders)
