[workspace]
members = [
  "crates/json-stream",
  "crates/octo-cli",
  "crates/octo-server",
  "crates/octo-types",
  "crates/prefix-id",
  "crates/rho-agent",
  "crates/rho-blocking-notify-channel",
  "crates/rho-ci",
  "crates/rho-claude",
  "crates/rho-cli",
  "crates/rho-cli-term-raw",
  "crates/rho-code-mode",
  "crates/rho-commands",
  "crates/rho-context-config",
  "crates/rho-core",
  "crates/rho-daemon",
  "crates/rho-db",
  "crates/rho-gui",
  "crates/rho-inference",
  "crates/rho-iroh-auth",
  "crates/rho-pr-monitor",
  "crates/rho-profiling",
  "crates/rho-slack",
  "crates/rho-term-screen",
  "crates/rho-tool-shell",
  "crates/rho-ui-proto",
  "crates/rho-voice",
  "crates/rho-webui-messages",
  "crates/rho-workspaces",
  "crates/rho-zed-host",
  "crates/senax-encoder",
  "crates/senax-encoder/derive",
]
# The web UI is its own workspace: it targets wasm32 and is built with trunk.
exclude = ["crates/pprof", "webui"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/maan2003/rho"
rust-version = "1.89"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
axum = "0.8"
base64 = "0.22"
bon = { version = "3", default-features = false }
bytes = "1"
camino = "1"
ciborium = "0.2"
clap = { version = "4", features = ["derive", "env"] }
crossterm = { version = "0.28", default-features = false, features = [
  "bracketed-paste",
  "events",
] }
deno_core = "0.407"
deno_error = "0.7"
dirs = { version = "6", default-features = false }
fnv = "1"
futures = "0.3"
futures-util = "0.3"
iroh = { version = "1.0.2", default-features = false }
json-stream = { path = "crates/json-stream" }
libc = "0.2"
octo-server = { path = "crates/octo-server" }
octo-types = { path = "crates/octo-types" }
pprof = { path = "crates/pprof", default-features = false }
prefix-id = { path = "crates/prefix-id", default-features = false }
rho-zed-host = { path = "crates/rho-zed-host" }
rand = "0.8"
redb = "4.1.0"
redb-derive = "0.1.0"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls-native-roots",
] }
rho-agent = { path = "crates/rho-agent" }
rho-blocking-notify-channel = { path = "crates/rho-blocking-notify-channel" }
rho-ci = { path = "crates/rho-ci" }
rho-claude = { path = "crates/rho-claude" }
rho-cli = { path = "crates/rho-cli" }
rho-cli-term-raw = { path = "crates/rho-cli-term-raw" }
rho-code-mode = { path = "crates/rho-code-mode" }
rho-commands = { path = "crates/rho-commands" }
rho-context-config = { path = "crates/rho-context-config" }
rho-core = { path = "crates/rho-core" }
rho-daemon = { path = "crates/rho-daemon" }
rho-db = { path = "crates/rho-db" }
rho-inference = { path = "crates/rho-inference" }
rho-iroh-auth = { path = "crates/rho-iroh-auth" }
rho-pr-monitor = { path = "crates/rho-pr-monitor" }
rho-profiling = { path = "crates/rho-profiling" }
rho-slack = { path = "crates/rho-slack" }
rho-term-screen = { path = "crates/rho-term-screen" }
rho-tool-shell = { path = "crates/rho-tool-shell" }
rho-ui-proto = { path = "crates/rho-ui-proto" }
rho-voice = { path = "crates/rho-voice" }
rho-webui-messages = { path = "crates/rho-webui-messages" }
rho-workspaces = { path = "crates/rho-workspaces" }
senax-encoder = { path = "crates/senax-encoder" }
senax-encoder-derive = { path = "crates/senax-encoder/derive" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = { version = "3", default-features = false }
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-tungstenite = { version = "0.29", default-features = false, features = [
  "connect",
  "handshake",
  "rustls-tls-native-roots",
] }
tracing = { version = "0.1", default-features = false, features = [
  "attributes",
  "std",
] }
unicode-segmentation = { version = "1", default-features = false }
unicode-width = { version = "0.2", default-features = false }
ureq = { version = "3", default-features = false, features = [
  "platform-verifier",
  "rustls",
] }
url = { version = "2", default-features = false }
uuid = { version = "1", features = ["serde", "v4"] }
vt100 = { version = "0.16", default-features = false }
zip = { version = "2", default-features = false, features = ["deflate", "time"] }

[profile.ci]
debug = "line-tables-only"
incremental = false
inherits = "dev"
lto = "off"

[profile.profiling]
debug = "line-tables-only"
inherits = "release"

# Temporary: build zed crates from the local fork checkout while rho-zed-host
# work is in flight. Remove once the fork changes are pushed to the `rho`
# branch on github and the git dep is bumped.
[patch."https://github.com/maan2003/zed"]
askpass = { path = "/home/maan2003/src/zed/crates/askpass" }
assets = { path = "/home/maan2003/src/zed/crates/assets" }
client = { path = "/home/maan2003/src/zed/crates/client" }
clock = { path = "/home/maan2003/src/zed/crates/clock" }
collections = { path = "/home/maan2003/src/zed/crates/collections" }
command_palette = { path = "/home/maan2003/src/zed/crates/command_palette" }
editor = { path = "/home/maan2003/src/zed/crates/editor" }
extension = { path = "/home/maan2003/src/zed/crates/extension" }
fs = { path = "/home/maan2003/src/zed/crates/fs" }
gpui = { path = "/home/maan2003/src/zed/crates/gpui" }
gpui_platform = { path = "/home/maan2003/src/zed/crates/gpui_platform" }
gpui_tokio = { path = "/home/maan2003/src/zed/crates/gpui_tokio" }
http_client = { path = "/home/maan2003/src/zed/crates/http_client" }
language = { path = "/home/maan2003/src/zed/crates/language" }
multi_buffer = { path = "/home/maan2003/src/zed/crates/multi_buffer" }
node_runtime = { path = "/home/maan2003/src/zed/crates/node_runtime" }
project = { path = "/home/maan2003/src/zed/crates/project" }
release_channel = { path = "/home/maan2003/src/zed/crates/release_channel" }
remote = { path = "/home/maan2003/src/zed/crates/remote" }
remote_server = { path = "/home/maan2003/src/zed/crates/remote_server" }
rpc = { path = "/home/maan2003/src/zed/crates/rpc" }
search = { path = "/home/maan2003/src/zed/crates/search" }
settings = { path = "/home/maan2003/src/zed/crates/settings" }
text = { path = "/home/maan2003/src/zed/crates/text" }
theme = { path = "/home/maan2003/src/zed/crates/theme" }
theme_settings = { path = "/home/maan2003/src/zed/crates/theme_settings" }
ui = { path = "/home/maan2003/src/zed/crates/ui" }
util = { path = "/home/maan2003/src/zed/crates/util" }
vim = { path = "/home/maan2003/src/zed/crates/vim" }
worktree = { path = "/home/maan2003/src/zed/crates/worktree" }

