[workspace]
members = [
  "crates/json-stream",
  "crates/prefix-id",
  "crates/rho-agent",
  "crates/rho-blocking-notify-channel",
  "crates/rho-ci",
  "crates/rho-claude",
  "crates/rho-cli",
  "crates/rho-cli-term-raw",
  "crates/rho-commands",
  "crates/rho-core",
  "crates/rho-daemon",
  "crates/rho-db",
  "crates/rho-gui",
  "crates/rho-iroh-auth",
  "crates/rho-inference",
  "crates/rho-term-screen",
  "crates/rho-tool-shell",
  "crates/rho-ui-proto",
  "crates/rho-voice",
  "crates/rho-workspaces",
  "crates/senax-encoder",
  "crates/senax-encoder/derive",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/maan2003/rho"
rust-version = "1.89"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
base64 = "0.22"
bon = { version = "3", default-features = false }
bytes = "1"
camino = "1"
ciborium = "0.2"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", default-features = false, features = [
  "bracketed-paste",
  "events",
] }
dirs = { version = "6", default-features = false }
fnv = "1"
iroh = { version = "1.0.2", default-features = false }
futures = "0.3"
futures-util = "0.3"
json-stream = { path = "crates/json-stream" }
prefix-id = { path = "crates/prefix-id" }
rand = "0.8"
redb = "4.1.0"
redb-derive = "0.1.0"
rho-agent = { path = "crates/rho-agent" }
rho-blocking-notify-channel = { path = "crates/rho-blocking-notify-channel" }
rho-claude = { path = "crates/rho-claude" }
rho-ci = { path = "crates/rho-ci" }
rho-cli = { path = "crates/rho-cli" }
rho-cli-term-raw = { path = "crates/rho-cli-term-raw" }
rho-commands = { path = "crates/rho-commands" }
rho-core = { path = "crates/rho-core" }
rho-daemon = { path = "crates/rho-daemon" }
rho-db = { path = "crates/rho-db" }
rho-inference = { path = "crates/rho-inference" }
rho-iroh-auth = { path = "crates/rho-iroh-auth" }
rho-term-screen = { path = "crates/rho-term-screen" }
rho-tool-shell = { path = "crates/rho-tool-shell" }
rho-ui-proto = { path = "crates/rho-ui-proto" }
rho-voice = { path = "crates/rho-voice" }
rho-workspaces = { path = "crates/rho-workspaces" }
senax-encoder = { path = "crates/senax-encoder" }
senax-encoder-derive = { path = "crates/senax-encoder/derive" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = { version = "3", default-features = false }
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-tungstenite = { version = "0.29", default-features = false, features = [
  "connect",
  "handshake",
  "rustls-tls-native-roots",
] }
tracing = { version = "0.1", default-features = false, features = [
  "attributes",
  "std",
] }
unicode-segmentation = { version = "1", default-features = false }
unicode-width = { version = "0.2", default-features = false }
ureq = { version = "3", default-features = false, features = [
  "platform-verifier",
  "rustls",
] }
url = { version = "2", default-features = false }
uuid = { version = "1", features = ["serde", "v4"] }
vt100 = { version = "0.16", default-features = false }

[profile.ci]
debug = "line-tables-only"
incremental = false
inherits = "dev"
lto = "off"
