[workspace]
members = [
  "crates/json-stream",
  "crates/octo-cli",
  "crates/octo-server",
  "crates/octo-types",
  "crates/prefix-id",
  "crates/rho-agent",
  "crates/rho-blocking-notify-channel",
  "crates/rho-ci",
  "crates/rho-claude",
  "crates/rho-cli",
  "crates/rho-cli-term-raw",
  "crates/rho-code-mode",
  "crates/rho-context-config",
  "crates/rho-core",
  "crates/rho-daemon",
  "crates/rho-db",
  "crates/rho-gui",
  "crates/rho-inference",
  "crates/rho-iroh-auth",
  "crates/rho-pr-monitor",
  "crates/rho-profiling",
  "crates/rho-slack",
  "crates/rho-term-screen",
  "crates/rho-tool-shell",
  "crates/rho-ui-proto",
  "crates/rho-webui-messages",
  "crates/rho-workspaces",
  "crates/rho-zed-host",
  "crates/senax-encoder",
  "crates/senax-encoder/derive",
]
# The web UI is its own workspace: it targets wasm32 and is built with trunk.
exclude = ["vendor/noq", "vendor/noq-proto", "webui"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/maan2003/rho"
rust-version = "1.89"
version = "0.1.0"

[workspace.dependencies]
alacritty_terminal = { git = "https://github.com/zed-industries/alacritty", rev = "4c129667ce56611becdc82de6e28218c80e2e88f" }
anyhow = "1"
async-stream = "0.3"
axum = "0.8"
base64 = "0.22"
bon = { version = "3", default-features = false }
bytes = "1"
camino = "1"
ciborium = "0.2"
clap = { version = "4", features = ["derive", "env"] }
crossterm = { version = "0.28", default-features = false, features = [
  "bracketed-paste",
  "events",
] }
deno_core = "0.407"
deno_error = "0.7"
dirs = { version = "6", default-features = false }
fnv = "1"
futures = "0.3"
futures-util = "0.3"
iroh = { version = "1.0.2", default-features = false }
json-stream = { path = "crates/json-stream" }
libc = "0.2"
noq-proto = { version = "=1.0.1", default-features = false }
octo-server = { path = "crates/octo-server" }
octo-types = { path = "crates/octo-types" }
pprof = { path = "crates/pprof", default-features = false }
prefix-id = { path = "crates/prefix-id", default-features = false }
rand = "0.8"
redb = "4.1.0"
redb-derive = "0.1.0"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls-native-roots-no-provider",
] }
rho-agent = { path = "crates/rho-agent" }
rho-blocking-notify-channel = { path = "crates/rho-blocking-notify-channel" }
rho-ci = { path = "crates/rho-ci" }
rho-claude = { path = "crates/rho-claude" }
rho-cli = { path = "crates/rho-cli" }
rho-cli-term-raw = { path = "crates/rho-cli-term-raw" }
rho-code-mode = { path = "crates/rho-code-mode" }
rho-context-config = { path = "crates/rho-context-config" }
rho-core = { path = "crates/rho-core" }
rho-daemon = { path = "crates/rho-daemon" }
rho-db = { path = "crates/rho-db" }
rho-inference = { path = "crates/rho-inference" }
rho-iroh-auth = { path = "crates/rho-iroh-auth" }
rho-pr-monitor = { path = "crates/rho-pr-monitor" }
rho-profiling = { path = "crates/rho-profiling" }
rho-slack = { path = "crates/rho-slack" }
rho-term-screen = { path = "crates/rho-term-screen" }
rho-tool-shell = { path = "crates/rho-tool-shell" }
rho-ui-proto = { path = "crates/rho-ui-proto" }
rho-webui-messages = { path = "crates/rho-webui-messages" }
rho-workspaces = { path = "crates/rho-workspaces" }
rho-zed-host = { path = "crates/rho-zed-host" }
rustix-openpty = "0.2"
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
  "std",
  "tls12",
] }
senax-encoder = { path = "crates/senax-encoder" }
senax-encoder-derive = { path = "crates/senax-encoder/derive" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = { version = "3", default-features = false }
tokio = { version = "1", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt",
  "rt-multi-thread",
  "sync",
  "time",
] }
tokio-tungstenite = { version = "0.29", default-features = false, features = [
  "connect",
  "handshake",
  "rustls-tls-native-roots",
] }
tracing = { version = "0.1", default-features = false, features = [
  "attributes",
  "std",
] }
unicode-segmentation = { version = "1", default-features = false }
unicode-width = { version = "0.2", default-features = false }
url = { version = "2", default-features = false }
uuid = { version = "1", features = ["serde", "v4"] }
vt100 = { version = "0.16", default-features = false }
zip = { version = "2", default-features = false, features = [
  "deflate",
  "time",
] }
[profile.ci]
debug = "line-tables-only"
incremental = false
inherits = "dev"
lto = "off"

[profile.profiling]
debug = "line-tables-only"
inherits = "release"

[patch.crates-io]
# Local noq fork: adds per-send-stream weights to fair scheduling while
# preserving noq's strict priority classes. Keep both crates patched because
# `noq` exposes the API and `noq-proto` owns the packet scheduler.
noq = { path = "vendor/noq" }
noq-proto = { path = "vendor/noq-proto" }
