[package]
name = "rho-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-stream.workspace = true
anyhow.workspace = true
bytes = "1"
futures.workspace = true
rho-core.workspace = true
rho-db.workspace = true
rho-inference.workspace = true
prefix-id.workspace = true
rho-tool-shell.workspace = true
redb.workspace = true
redb-derive = "0.1"
senax-encoder.workspace = true
serde_json.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
