[package]
name = "rho-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
bytes = "1"
camino.workspace = true
futures.workspace = true
prefix-id.workspace = true
rand.workspace = true
redb.workspace = true
redb-derive = "0.1"
rho-claude.workspace = true
rho-core.workspace = true
rho-db.workspace = true
rho-inference.workspace = true
rho-tool-shell.workspace = true
rho-workspaces.workspace = true
senax-encoder = { workspace = true, features = ["uuid"] }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
