[package]
name = "rho-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
rho.workspace = true
rho-agent.workspace = true
rho-cli-term-raw.workspace = true
rho-provider-responses.workspace = true
rho-store-cbor.workspace = true
rho-tool-shell.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[[bin]]
name = "rho"
path = "src/main.rs"
