[package]
name = "rho-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
dirs.workspace = true
libc.workspace = true
prefix-id.workspace = true
rho-agent.workspace = true
rho-ci.workspace = true
rho-daemon.workspace = true
rho-inference.workspace = true
rho-ui-proto.workspace = true
rho-workspaces.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
zip.workspace = true

[[bin]]
name = "rho"
path = "src/main.rs"
