[package]
name = "rho-context-config"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
camino.workspace = true
dirs.workspace = true
serde_yaml.workspace = true

[dev-dependencies]
tempfile.workspace = true
