[package]
name = "rho-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytes = "1"
inventory = "0.3"
prefix-id = { workspace = true, default-features = false }
senax-encoder = { workspace = true, features = ["serde_json"] }
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
