[package]
edition.workspace = true
license.workspace = true
name = "rho-daemon"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
dirs.workspace = true
futures.workspace = true
iroh = { workspace = true, features = ["tls-ring"] }
json-stream.workspace = true
octo-server.workspace = true
octo-types.workspace = true
prefix-id.workspace = true
rho-agent.workspace = true
rho-claude.workspace = true
rho-core.workspace = true
rho-db.workspace = true
rho-inference.workspace = true
rho-iroh-auth.workspace = true
rho-pr-monitor.workspace = true
rho-profiling.workspace = true
rho-slack.workspace = true
rho-ui-proto.workspace = true
rho-voice.workspace = true
rho-webui-messages.workspace = true
rho-workspaces.workspace = true
redb.workspace = true
serde.workspace = true
serde_json.workspace = true
rho-zed-host.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["signal"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
prost = "0.9"
rpc = { git = "https://github.com/maan2003/zed", branch = "rho" }
