[package]
edition.workspace = true
license.workspace = true
name = "rho-daemon"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
dirs.workspace = true
futures.workspace = true
octo.workspace = true
prefix-id.workspace = true
rho-agent.workspace = true
rho-claude.workspace = true
rho-core.workspace = true
rho-db.workspace = true
rho-inference.workspace = true
rho-slack.workspace = true
rho-ui-proto.workspace = true
rho-voice.workspace = true
rho-workspaces.workspace = true
tempfile.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
