[package]
edition.workspace = true
license.workspace = true
name = "rho-daemon"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alacritty_terminal.workspace = true
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
dirs.workspace = true
futures.workspace = true
iroh = { workspace = true, features = ["qlog", "tls-aws-lc-rs"] }
json-stream.workspace = true
libc.workspace = true
noq-proto.workspace = true
octo-server.workspace = true
octo-types.workspace = true
prefix-id.workspace = true
redb.workspace = true
rho-agent.workspace = true
rho-claude.workspace = true
rho-core.workspace = true
rho-db.workspace = true
rho-shell-proto.workspace = true
rho-inference.workspace = true
rho-iroh-auth.workspace = true
rho-pr-monitor.workspace = true
rho-profiling.workspace = true
rho-slack.workspace = true
rho-ui-proto.workspace = true
rho-webui-messages.workspace = true
rho-workspaces.workspace = true
rho-zed-host.workspace = true
rustix-openpty.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["signal"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
prost = "0.9"
rpc = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
rho-shell.workspace = true
