[package]
name = "rho-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bytes = "1"
redb.workspace = true
senax-encoder.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
