[package]
edition.workspace = true
license = "GPL-3.0-or-later"
name = "rho-gui"
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "rho-gui"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
askpass = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
assets = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
buffer_diff.workspace = true
async-trait = "0.1"
camino.workspace = true
clap.workspace = true
client = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
clock = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
collections = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
command_palette = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
dirs.workspace = true
editor = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
fs = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
futures.workspace = true
iroh = { workspace = true, features = ["qlog", "tls-aws-lc-rs"] }
gpui = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4", default-features = false, features = [
  "wayland",
] }
gpui_platform = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4", default-features = false, features = [
  "font-kit",
  "wayland",
] }
gpui_tokio = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
http_client = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
json-stream.workspace = true
language = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
languages = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4", features = ["load-grammars"] }
multi_buffer = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
prefix-id = { workspace = true, features = ["redb"] }
node_runtime = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
octo-types.workspace = true
project = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
prost = "0.9"
release_channel = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
remote = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
rho-core.workspace = true
rho-daemon.workspace = true
rho-iroh-auth.workspace = true
rho-profiling.workspace = true
rho-ui-proto.workspace = true
senax-encoder.workspace = true
# Same revision the zed fork pins, so a future switch to its `audio` crate
# shares one rodio build.
rodio = { git = "https://github.com/RustAudio/rodio", rev = "e50e726ddd0292f6ef9de0dda6b90af4ed1fb66a", default-features = false, features = [
  "playback",
  "wav",
] }
rpc = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
rustc-hash = "2.1.0"
search = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
semver = { version = "1.0", features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
settings = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
text = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
theme = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
theme_settings = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
tokio = { workspace = true, features = ["io-util", "net", "process", "rt"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tree-sitter-md = { git = "https://github.com/tree-sitter-grammars/tree-sitter-markdown", rev = "9a23c1a96c0513d8fc6520972beedd419a973539" }
ui = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
util = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
vim = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }
vim_mode_setting = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4" }

[dev-dependencies]
gpui = { git = "file:///home/maan2003/src/zed", rev = "4ca9239e36f4", default-features = false, features = [
  "test-support",
] }
